--- a/site/apis/index.html
+++ b/site/apis/index.html
@@ -113,9 +113,9 @@
               
                 <h1 id="microservices">Microservices</h1>
 <h3 id="sandbox">Sandbox</h3>
-<h4 id="data-services"><a href="https://apptreesoftware.github.io/site/swagger/index.html?url=https://mobile-core-sandbox.herokuapp.com/swagger.json">Data Services</a></h4>
-<h4 id="auth-services"><a href="https://apptreesoftware.github.io/site/swagger/index.html?url=https://mobile-auth-sandbox.herokuapp.com/swagger.json">Auth Services</a></h4>
-<h4 id="portal-services"><a href="https://apptreesoftware.github.io/site/swagger/index.html?url=http://metrics-sandbox.herokuapp.com/swagger.json">Portal Services</a></h4>
+<h4 id="data-services"><a href="https://apptreesoftware.github.io/swagger/index.html?url=https://mobile-core-sandbox.herokuapp.com/swagger.json">Data Services</a></h4>
+<h4 id="auth-services"><a href="https://apptreesoftware.github.io/swagger/index.html?url=https://mobile-auth-sandbox.herokuapp.com/swagger.json">Auth Services</a></h4>
+<h4 id="portal-services"><a href="https://apptreesoftware.github.io/swagger/index.html?url=http://metrics-sandbox.herokuapp.com/swagger.json">Portal Services</a></h4>
               
             </div>
           </div>
